--- a/styles/main.css
+++ b/styles/main.css
@@ -36,8 +36,12 @@ main {
     clear:both;
 }
 main h3 {
-    margin-top: 3em;
     font-size: 105%;
+    margin: 1.5em 2em 1.5em;
+    border: 5px dashed blue;
+    border-radius: 250px;
+    box-shadow: 3px 3px 4px 4px red;
+    padding: 1em;
 }
 #list {
     line-height: 1.5em;
