--- a/styles/main.css
+++ b/styles/main.css
@@ -58,7 +58,7 @@ div.contact {
     border: 5px dotted blue;
     border-radius: 20px;
     box-shadow: 3px 3px 4px 4px red;
-    padding: 1em
+    padding: 1em;
 }
 footer p.copyright {
     text-align: center;
