--- a/styles/main.css
+++ b/styles/main.css
@@ -18,11 +18,11 @@ body {
 }
 a:focus, a:hover {
     font-style: italic;
-    color: blueviolet;
+    color: rgb(252, 24, 24);
 }
 h1 {
     font-size: 175%;
-    color:darkviolet;
+    color:rgb(224, 10, 10);
     text-indent: 30px;
 }
 h2 {
