--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
     width: 1000px;
-    background-color: white;
+    background-color: rgba(155, 151, 151, 0.644);
     margin: 15px auto;
     padding: 15px 1.5em;
     border: 1px solid black;
