--- a/styles/main.css
+++ b/styles/main.css
@@ -11,7 +11,7 @@ body {
     border: 1px solid black;
     border-radius: 25px;
     box-shadow: 5px 5px 0 0;
-    background-image: url("../images/small-bat-clip-art-39.jpg");
+    background-image: url("../images/image_processing20200410-19194-19eu13v.png");
     background-position: right;
     background-repeat: repeat-y;
     background-attachment: fixed;
