--- a/styles/project.css
+++ b/styles/project.css
@@ -65,5 +65,5 @@ color: red;
 aside {
     width: 20%;
     float: right;
-    background-color: gray;
+    background-color: rgba(155, 151, 151, 0.644);
 }
