--- a/styles/project.css
+++ b/styles/project.css
@@ -60,10 +60,21 @@ article p::first-letter {
 font-size: 3em;
 font-weight: bold;
 font-style: italic;
-color: red;
+color: blueviolet;
 }
 aside {
     width: 20%;
     float: right;
     background-color: rgba(155, 151, 151, 0.644);
+}
+footer {
+    clear: both;
+    border-top:  2px solid red;
+}
+footer p.copyright {
+    text-align: center;
+    font-size: 80%;
+}
+p.fixed {
+width: auto;
 }
