--- a/styles/project.css
+++ b/styles/project.css
@@ -66,7 +66,16 @@ aside {
     float: right;
     background-color: rgba(155, 151, 151, 0.644);
     padding: 1em;
-    border-top: 2px solid red;
+}
+aside::before {
+    content: "";
+    display: block;
+    width: 100vw;
+    height: 2px;
+    background-color: maroon;
+    position: relative;
+    left: calc(-50vw + 50%);
+    margin-bottom: 0.5em;
 }
 footer {
     clear: both;
