--- a/styles/menu.css
+++ b/styles/menu.css
@@ -22,14 +22,14 @@ body {
   width: 180px;
   padding: 1em 0;
   text-decoration: none;
-  background-color: #333;
-  color: white;
+  background-color: #blue;
+  color: blue;
   font-weight: bold;
 }
 
 #nav_menu ul li a:hover,
 #nav_menu ul li a:focus {
-  background-color: #555;
+  background-color: blue;
 }
 
 #nav_menu ul li a.current {
@@ -63,7 +63,7 @@ body {
 
 aside {
   width: 100%;
-  background-color: #f4f4f4;
+  background-color: blue;
   padding: 15px;
   box-sizing: border-box;
 }
@@ -82,10 +82,10 @@ aside ul {
 }
 
 h1 {
-  color: #333;
+  color: blue;
 }
 h2 {
-  color: #555;
+  color: blue;
   border-bottom: 1px solid #ccc;
   padding-bottom: 5px;
 }
