--- a/styles/menu.css
+++ b/styles/menu.css
@@ -4,70 +4,44 @@ body {
   line-height: 1.6;
 }
 
-#nav_menu ul {
+nav {
+  background-color: #333;
+}
+nav ul {
   list-style: none;
-  position: relative;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
-
-#nav_menu ul li {
+nav ul li {
   float: left;
-  position: relative;
 }
-
-#nav_menu ul li a {
+nav ul li a {
+  display: block;
+  color: white;
   text-align: center;
-  display: block;
-  width: 180px;
-  padding: 1em 0;
+  padding: 14px 20px;
   text-decoration: none;
-  background-color: #blue;
-  color: blue;
-  font-weight: bold;
+}
+nav ul li a:hover {
+  background-color: #111;
+}
+nav ul li a.current {
+  background-color: #555;
 }
 
-#nav_menu ul li a:hover,
-#nav_menu ul li a:focus {
-  background-color: blue;
-}
-
-#nav_menu ul li a.current {
-  color: yellow;
-}
-
-#nav_menu ul ul {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  margin: 0;
-  padding: 0;
-}
-
-#nav_menu ul ul li {
-  float: none;
-  position: relative;
-}
-
-#nav_menu ul li:hover > ul {
-  display: block;
-}
-
-#nav_menu > ul::after {
+nav::after {
   content: "";
   display: block;
   clear: both;
 }
 
-
 aside {
   width: 100%;
-  background-color: blue;
+  background-color: #f4f4f4;
   padding: 15px;
   box-sizing: border-box;
 }
-
 article {
   width: 100%;
   padding: 20px;
@@ -82,10 +56,10 @@ aside ul {
 }
 
 h1 {
-  color: blue;
+  color: #333;
 }
 h2 {
-  color: blue;
+  color: #555;
   border-bottom: 1px solid #ccc;
   padding-bottom: 5px;
 }
