--- a/styles/menu.css
+++ b/styles/menu.css
@@ -2,64 +2,87 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.6;
+  background-color: #ffffff;
 }
 
-nav {
-  background-color: #333;
+#top_menu {
+  background-color: #003366;
+  border-bottom: 3px solid #999;
 }
-nav ul {
+
+#top_menu ul {
   list-style: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
 }
-nav ul li {
+
+#top_menu ul li {
   float: left;
 }
-nav ul li a {
+
+#top_menu ul li a {
   display: block;
   color: white;
+  font-weight: bold;
   text-align: center;
-  padding: 14px 20px;
+  padding: 14px 25px;
   text-decoration: none;
 }
-nav ul li a:hover {
-  background-color: #111;
-}
-nav ul li a.current {
-  background-color: #555;
+
+#top_menu ul li a:hover,
+#top_menu ul li a:focus {
+  background-color: #336699;
 }
 
-nav::after {
+#top_menu ul li a.current {
+  background-color: #6699cc;
+  color: #fff200;
+}
+
+#top_menu::after {
   content: "";
   display: block;
   clear: both;
 }
 
+article {
+  width: 90%;
+  margin: 25px auto;
+  padding: 20px;
+  background-color: #ffffff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
 aside {
-  width: 100%;
+  width: 90%;
+  margin: 20px auto 40px auto;
   background-color: #f4f4f4;
   padding: 15px;
   box-sizing: border-box;
-}
-article {
-  width: 100%;
-  padding: 20px;
-  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
 
 aside ol {
   list-style-type: upper-roman;
 }
+
 aside ul {
   list-style-type: square;
 }
 
 h1 {
-  color: #333;
-}
-h2 {
-  color: #555;
-  border-bottom: 1px solid #ccc;
+  color: #003366;
+  border-bottom: 2px solid #ccc;
   padding-bottom: 5px;
+}
+
+h2 {
+  color: #333;
+  border-bottom: 1px solid #ccc;
+  margin-top: 30px;
+  padding-bottom: 3px;
 }
