--- a/styles/exam.css
+++ b/styles/exam.css
@@ -1,16 +1,22 @@
 body {
     width: 95%;
     margin: 15px auto;
-    background: #fff url('WATERMARK_IMAGE_URL') right repeat-y fixed;
+    background: #fff;
     font-family: Arial, sans-serif;
 }
 
 .page-border {
-    border: 2px solid #333;
+    border: 2.5px solid #333;
     margin: 10px auto;
     background: #fff;
     position: relative;
     min-height: 98vh;
+    /* Watermark: right, vertical repeat, fixed */
+    background-image: url("SHSU_block_logo.svg.jpg");
+    background-position: right top;
+    background-repeat: repeat-y;
+    background-attachment: fixed;
+    background-size: 320px auto;
 }
 
 nav {
@@ -23,66 +29,68 @@ nav {
     background: #232679;
     margin: 0;
     padding: 0;
-    border: 1px solid #232679;
-    border-radius: 6px 6px 0 0;
+    border-radius: 7px 7px 0 0;
     overflow: hidden;
+    border: 2px solid #232679;
 }
 
 .menu-bar li {
-    flex: 1 1 0;
+    flex: 1;
     text-align: center;
-    margin: 0;
     border-right: 1px solid #fff;
 }
 
 .menu-bar li:last-child {
-    border: none;
+    border-right: none;
 }
 
 .menu-bar a {
     display: block;
     color: #fff;
     text-decoration: none;
-    padding: 13px 0;
+    padding: 14px 0;
     font-weight: bold;
-    letter-spacing: 0.5px;
+    letter-spacing: 0.4px;
+    font-size: 1.1em;
 }
 
 .menu-bar a:hover {
-    background: #2c36ae;
+    background: #3856e9;
 }
 
 .menu-divider, .content-divider {
     border: none;
     border-top: 2px solid #232679;
-    margin: 0 0 20px 0;
+    margin: 0 0 18px 0;
 }
 
 aside {
-    width: 220px;
+    width: 200px;
     padding: 15px 10px;
     background: #e6e9f7cc;
     border: 2px solid #3796C9;
     position: fixed;
-    right: 30px;
-    top: 110px;
+    right: 40px;
+    top: 125px;
     z-index: 100;
-    box-shadow: 2px 2px 10px #bbb;
+    box-shadow: 2px 2px 8px #bbb;
     font-size: 1.1em;
 }
 
 .aside-list {
     list-style-type: square;
-    padding-left: 18px;
+    padding-left: 23px;
+    margin: 0;
 }
 
 .aside-list li {
-    margin: 0 0 10px 0;
+    margin: 0 0 9px 0;
 }
 
 .aside-list a {
     color: #232679;
     text-decoration: underline;
+    font-weight: bold;
 }
 
 main {
@@ -90,34 +98,38 @@ main {
 }
 
 article {
-    width: 75%;
-    margin: 0 auto 20px 25px;
-    padding: 10px 28px 5px 18px;
+    width: 74%;
+    margin: 0 auto 24px 20px;
+    padding: 15px 20px 7px 19px;
     column-count: 3;
-    column-gap: 20px;
-    min-height: 50vh;
-    background: rgba(255,255,255,0.85);
+    column-gap: 24px;
+    background: rgba(255,255,255,0.93);
     border: 1.5px solid #348fd7;
-    border-radius: 6px;
+    border-radius: 8px;
+    box-sizing: border-box;
+    min-height: 50vh;
+    column-rule: 2px solid #348fd7;
 }
 
 article h1 {
-    font-size: 2em;
-    margin-bottom: 0.4em;
+    font-size: 2.1em;
+    margin-bottom: 0.35em;
     color: #232679;
     column-span: all;
-    border-bottom: 1px solid #348fd7;
-    padding-bottom: 0.22em;
+    border-bottom: 1.2px solid #348fd7;
+    padding-bottom: 0.19em;
+    font-weight: bold;
 }
 
 article h2 {
     color: #348fd7;
     font-size: 1.25em;
     margin-top: 1em;
-    margin-bottom: 0.4em;
+    margin-bottom: 0.37em;
     column-span: all;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #e3e3e3;
     padding-bottom: 0.12em;
+    font-weight: bold;
 }
 
 .intro-wrap {
@@ -125,25 +137,27 @@ article h2 {
     display: flex;
     align-items: flex-start;
     gap: 15px;
+    margin-bottom: 12px;
 }
 
 .intro-image {
     float: left;
-    margin: 0 20px 5px 0;
-    width: 80px;
-    height: 80px;
+    margin: 0 13px 5px 0;
+    width: 67px;
+    height: 67px;
     object-fit: cover;
     border: 2px solid #AAA;
     background: #fff;
 }
 
 .first-letter {
-    font-size: 2em;
+    font-size: 2.23em;
     font-weight: bold;
     font-style: italic;
     float: left;
     line-height: 1;
-    padding-right: 5px;
+    padding-right: 6px;
+    color: #232679;
 }
 
 article p {
@@ -153,30 +167,29 @@ article p {
 
 footer {
     text-align: center;
-    padding: 12px 0 5px 0;
+    padding: 12px 0 7px 0;
     border-top: 2px solid #232679;
-    margin-top: 45px;
+    margin-top: 48px;
     background: #fff;
 }
 
 footer a {
     color: #348fd7;
     text-decoration: underline;
+    font-weight: bold;
 }
 
-article {
-    column-rule: 1.5px solid #348fd7;
-}
-
+/* For small screens, stack content */
 @media (max-width: 1150px) {
-    article, aside {
-        width: 98%;
-        margin: 0;
+    article {
+        width: 99%;
+        margin-left: 0;
         column-count: 1;
     }
     aside {
         position: static;
         width: 98%;
         margin: 0 auto 15px auto;
+        box-shadow: none;
     }
 }
