--- a/exam.css
+++ b/exam.css
@@ -11,7 +11,7 @@ body {
     background: #fff;
     position: relative;
     min-height: 98vh;
-    background-image: url("images/SHSU_block_logo.svg.png");
+    background-image: url("..images/SHSU_block_logo.svg.png");
     background-position: right top;
     background-repeat: repeat-y;
     background-attachment: fixed;
