--- a/exam.css
+++ b/exam.css
@@ -131,6 +131,10 @@ article h2 {
     font-weight: bold;
 }
 
+article p:first-of-type {
+    column-span: all;
+}
+
 .intro-image {
     float: left;
     margin: 0 15px 10px 0;
