--- a/exam.css
+++ b/exam.css
@@ -126,7 +126,7 @@ article h2 {
     margin-top: 1em;
     margin-bottom: 0.37em;
     column-span: all;
-    border-bottom: 1px solid #e3e3e3;
+    border-bottom: none;
     padding-bottom: 0.12em;
     font-weight: bold;
 }
