--- a/exam.css
+++ b/exam.css
@@ -121,7 +121,7 @@ article h1 {
 }
 
 article h2 {
-    color: #348fd7;
+    color: #1E40AF;
     font-size: 1.25em;
     margin-top: 1em;
     margin-bottom: 0.37em;
