--- a/rwd.css
+++ b/rwd.css
@@ -79,7 +79,7 @@ body {
 }
 
 #menu-toggle:checked + .menu-button-container .menu-button {
-  background: rgba(255, 255, 255, 0); /* 54 */
+  background: rgba(255, 255, 255, 0);
 }
 
 #menu-toggle:checked + .menu-button-container .menu-button::after {
